--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,8 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2", # <- now you can add it here
     "imbalanced-learn",
+    "streamlit>=1.49.1",
+    "langchain>=0.3.27",
+    "langchain-google-genai>=2.1.10",
 ]
 requires-python = "~=3.10.0"
